--- a/index.html
+++ b/index.html
@@ -4,30 +4,115 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MetroPath Optimizer</title>
+    <title>TЯAIИ SLATIOИ : Pathfinder</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --void-black: #05070a;
+        --iron-gray: #161b22;
+        --glow-red: #ff4d4d;
+        --glow-green: #39ff14;
+        --glow-blue: #00d2ff;
+        --glow-yellow: #ffcc00;
+        
+        /* Updated Grayer/Industrial Theme */
+        --paper-bg: #8a8d94;
+        --ink-black: #1a1a1a;
+        --ink-gray: #333333;
+      }
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'JetBrains Mono', monospace;
+        background-color: var(--void-black);
+        color: #e6edf3;
         overflow: hidden;
-        background-color: #0f172a;
-        color: #f8fafc;
       }
-      .glass-panel {
-        background: rgba(15, 23, 42, 0.8);
-        backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+      .industrial-panel {
+        background: rgba(22, 27, 34, 0.95);
+        border: 2px solid #30363d;
+        box-shadow: inset 0 0 20px rgba(0,0,0,0.5);
       }
-      @keyframes flow {
-        from { stroke-dashoffset: 20; }
-        to { stroke-dashoffset: 0; }
+      .scanlines {
+        position: fixed;
+        top: 0; left: 0; width: 100%; height: 100%;
+        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
+        background-size: 100% 2px, 3px 100%;
+        pointer-events: none;
+        z-index: 1000;
+        opacity: 0.15;
+      }
+      .grain {
+        position: fixed;
+        top: 0; left: 0; width: 100%; height: 100%;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3%3Ffilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        opacity: 0.08;
+        pointer-events: none;
+        z-index: 999;
+      }
+      @keyframes path-pulse {
+        0% { stroke-dashoffset: 24; opacity: 0.7; }
+        50% { opacity: 1; }
+        100% { stroke-dashoffset: 0; opacity: 0.7; }
       }
       .path-flow {
-        stroke-dasharray: 10, 5;
-        animation: flow 1s linear infinite;
+        stroke-dasharray: 4, 8;
+        animation: path-pulse 3s linear infinite;
+      }
+      .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: #30363d; border-radius: 10px; }
+      .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #484f58; }
+
+      .radial-toggle {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+        background: rgba(0,0,0,0.4);
+        border: 1px solid #30363d;
+        transition: all 0.2s ease;
+      }
+      .radial-toggle:hover {
+        border-color: #ef4444;
+      }
+      .radial-circle {
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        border: 2px solid #475569;
+        position: relative;
+        transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      }
+      .radial-circle::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 0px;
+        height: 0px;
+        background: #ef4444;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        transition: all 0.2s ease;
+        box-shadow: 0 0 8px #ef4444;
+      }
+      .radial-toggle.active .radial-circle {
+        border-color: #ef4444;
+      }
+      .radial-toggle.active .radial-circle::after {
+        width: 6px;
+        height: 6px;
+      }
+
+      .paper-texture {
+        background-color: var(--paper-bg);
+        background-image: 
+          radial-gradient(at 0% 0%, rgba(255, 255, 255, 0.2) 0, transparent 50%),
+          radial-gradient(at 50% 0%, rgba(0, 0, 0, 0.1) 0, transparent 50%),
+          url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.6' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.08'/%3E%3C/svg%3E");
       }
     </style>
   <script type="importmap">
@@ -41,6 +126,8 @@
 </script>
 </head>
   <body>
+    <div class="scanlines"></div>
+    <div class="grain"></div>
     <div id="root"></div>
   </body>
 </html>
