--- a/index.html
+++ b/index.html
@@ -129,5 +129,6 @@
     <div class="scanlines"></div>
     <div class="grain"></div>
     <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
   </body>
 </html>
